--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
+<button style="border: 1px solid white;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-left" style="color: white;"></i></button>
+<button style="border: 1px solid white;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-right" style="color: white;"></i></button>
 <router-outlet></router-outlet>
