--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<button style="border: 1px solid white;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-left" style="color: white;"></i></button>
-<button style="border: 1px solid white;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-right" style="color: white;"></i></button>
+<div class="container">
+    <button style="border: 1px solid white;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-left" style="color: white;"></i></button>
+    <input type="number" style="-webkit-appearance: none;-moz-appearance: textfield;" value="1">
+    <button style="border: 1px solid white;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-right" style="color: white;"></i></button>
+</div>
+
+
+
 <router-outlet></router-outlet>
