--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<div class="container">
-    <button style="border: 1px solid white;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-left" style="color: white;"></i></button>
-    <input type="number" style="-webkit-appearance: none;-moz-appearance: textfield;" value="1">
-    <button style="border: 1px solid white;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-right" style="color: white;"></i></button>
+<div class="container d-flex justify-content-center align-items-center">
+    <div>
+        <button style="border: 1px solid white; width: 60px; height: 60px;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-left" style="color: white;"></i></button>
+    </div>
+    <div>
+        <input style="height: 60px;" type="number" class="form-control text-center" value="1">
+    </div>
+    <div>
+        <button style="border: 1px solid white; width: 60px; height: 60px;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-right" style="color: white;"></i></button>
+    </div>
 </div>
 
 
