--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container px-0" style="max-width: 750px;">
+    <div style="padding: 5px 5px 0 5px;">
     <div class="container px-0 d-flex justify-content-between align-items-center">
         <button style="border: 1px solid white; width: 60px; height: 60px;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-left" style="color: white;"></i></button>
         <input style="height: 60px; flex: 1; font-size: 30px;" type="number" class="form-control text-center" value="1">
         <button style="border: 1px solid white; width: 60px; height: 60px;" class="btn btn-secondary btn-lg btn-primary"><i class="fa fa-chevron-right" style="color: white;"></i></button>
+    </div>
     </div>
 </div>
 
