--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div class="container px-0" style="max-width: 750px;">
-    <div style="padding: 5px 5px 0 5px;">
+    <div style="padding: 5px 5px 5px 5px;">
         <div class="container px-0 d-flex justify-content-between align-items-center">
             <button style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-left" style="color: white;"></i></button>
             <input style="height: 60px; flex: 1; font-size: 40px;" type="number" class="form-control text-center" value="" placeholder="1">
             <button style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-right" style="color: white;"></i></button>
         </div>
+    </div>
+    <div style="padding: 5px 5px 5px 5px;">
+        <h3 class="text-center">Jesus, I My Cross Have Taken</h3>
     </div>
 </div>
 <router-outlet></router-outlet>
