--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,57 @@
 <div class="container px-0" style="max-width: 750px;">
-    <div style="padding: 5px 5px 5px 5px;">
+    <div style="padding: 5px; position: fixed; top: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: white;">
         <div class="container px-0 d-flex justify-content-between align-items-center">
             <button style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-left" style="color: white;"></i></button>
             <input style="height: 60px; flex: 1; font-size: 40px;" type="number" class="form-control text-center" value="" placeholder="1">
             <button style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-right" style="color: white;"></i></button>
         </div>
     </div>
-    <div style="padding: 5px 5px 5px 5px;">
-        <h3 class="text-center">Jesus, I My Cross Have Taken</h3>
+    <div class="container px-0" style="margin-top: 80px;">
+        <h2 class="text-center">Jesus, I My Cross Have Taken</h2>
+        <p class="text-center">
+            Jesus, I my cross have taken,<br>
+            All to leave, and follow Thee;<br>
+            Destitute, despised, forsaken,<br>
+            Thou from hence, my all shall be.<br>
+            Perish ev'ry fond ambition,<br>
+            All I've sought, and hoped, and known;<br>
+            Yet how rich is my condition,<br>
+            God and Heav'n are still my own!
+        </p>
+        <p class="text-center">
+            Let the world despise and leave me,<br>
+            They have left my Saviour, too;<br>
+            Human hearts and looks deceive me,<br>
+            Thou art not, like man, untrue.<br>
+            And, while Thou shalt smile upon me,<br>
+            God of Wisdom, love, and might,<br>
+            Foes may hate, and friends may shun me;<br>
+            Show Thy face, and all is bright.
+        </p>
+        <p class="text-center">
+            Man may trouble and distress me,<br>
+            'Twill but drive me to Thy breast;<br>
+            Life with trials hard may press me,<br>
+            Heav'n will bring me sweeter rest.<br>
+            O 'tis not in grief to harm me,<br>
+            While Thy love is left to me;<br>
+            O 'twere not in joy to charm me,<br>
+            Were that joy unmixed with Thee.
+        </p>
+        <p class="text-center">
+            Haste thee on from grace to glory,<br>
+            Armed by faith, and winged by pray'r;<br>
+            Heav'n's eternal day's before thee,<br>
+            God's own hand shall guide thee there.<br>
+            Soon shall close thy earthly mission,<br>
+            Swift shall pass they pilgrim days,<br>
+            Hope shall change to glad fruition,<br>
+            Faith to sight, and pray'r to praise.
+        </p>
+    </div>
+    <div style="padding: 5px; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px;">
+        <button style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-book" style="color: white;"></i></button>
     </div>
 </div>
+
 <router-outlet></router-outlet>
