--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container px-0" style="max-width: 750px;">
+<div class="container px-0" (swipeleft)="swipeLeft()" (swiperight)="swipeRight()" style="max-width: 750px;">
     <div style="padding: 5px 5px 0 5px; position: fixed; top: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: white;">
         <div class="container px-0 d-flex justify-content-between align-items-center">
             <button (click)="decrementHymn()" style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-left" style="color: white;"></i></button>
