--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="container px-0" (swipeleft)="swipeLeft()" (swiperight)="swipeRight()" style="max-width: 750px;">
-    <div style="padding: 5px 5px 0 5px; position: fixed; top: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: white;">
+    <div style="padding: 10px 10px 10px 10px; position: fixed; top: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: #212529;">
         <div class="container px-0 d-flex justify-content-between align-items-center">
-            <button (click)="decrementHymn()" style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-left" style="color: white;"></i></button>
+            <button (click)="decrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-left" style="color: black;"></i></button>
+            <div style="padding-left: 10px;"></div>
             <input #hymnNumberInput [(ngModel)]="searchValue" (keydown.enter)="searchHymn()" style="height: 60px; flex: 1; font-size: 40px;" type="number" class="form-control text-center" [placeholder]="currentHymnIndex + 1">
-            <button (click)="incrementHymn()" style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-right" style="color: white;"></i></button>
+            <div style="padding-right: 10px;"></div>
+            <button (click)="incrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-right" style="color: black;"></i></button>
         </div>
     </div>
     <div class="container px-0" style="margin-top: 80px;">
