--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
             <button (click)="incrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-right" style="color: black;"></i></button>
         </div>
     </div>
-    <div class="container px-0" style="margin-top: 80px;">
+    <div class="container px-0" style="margin-top: 90px; margin-bottom: 90px;">
         <div *ngIf="currentHymn" class="text-center">
             <h2>{{ currentHymn.Title }}</h2>
           
@@ -32,7 +32,7 @@
             </ng-container>
         </div>
     </div>
-    <div style="display: none; padding: 5px; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px;">
-        <button style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-book" style="color: white;"></i></button>
+    <div style="padding: 10px; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: #212529;">
+        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
     </div>
 </div>
