--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,16 @@
         </div>
     </div>
     <div style="padding: 10px; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: #212529;">
+      <div class="container px-0 d-flex">
         <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
+        <div style="padding-right: 10px;"></div>
+        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
+        <div style="padding-right: 10px;"></div>
+        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
+        <div style="padding-right: 10px;"></div>
+        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
+        <div style="padding-right: 10px;"></div>
+        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
+      </div>
     </div>
 </div>
