--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,13 +35,13 @@
     <div style="padding: 10px; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: #212529;">
       <div class="container px-0 d-flex">
         <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
-        <div style="padding-right: 10px;"></div>
+        <div style="padding-right: 10px; flex: 1;"></div>
         <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
-        <div style="padding-right: 10px;"></div>
+        <div style="padding-right: 10px; flex: 1;"></div>
         <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
-        <div style="padding-right: 10px;"></div>
+        <div style="padding-right: 10px; flex: 1;"></div>
         <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
-        <div style="padding-right: 10px;"></div>
+        <div style="padding-right: 10px; flex: 1;"></div>
         <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
       </div>
     </div>
