--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container px-0" (swipeleft)="swipeLeft()" (swiperight)="swipeRight()" style="max-width: 750px;">
+<div class="container px-0" style="max-width: 750px;">
     <div style="padding: 10px 10px 10px 10px; position: fixed; top: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: #212529;">
         <div class="container px-0 d-flex justify-content-between align-items-center">
             <button (click)="decrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-left" style="color: black;"></i></button>
@@ -7,26 +7,23 @@
             <div style="padding-right: 10px;"></div>
             <button (click)="incrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-right" style="color: black;"></i></button>
             <div style="padding-right: 10px;"></div>
-            <button (click)="incrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-bars" style="color: black;"></i></button>
+            <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-bars" style="color: black;"></i></button>
         </div>
     </div>
     <div class="container px-0" style="margin-top: 90px; margin-bottom: 90px;">
         <div *ngIf="currentHymn" class="text-center">
             <h2>{{ currentHymn.Title }}</h2>
           
-            <!-- Display Verse 1 -->
             <p style="white-space: pre-line;">
               {{ currentHymn.Verses[0] }}
             </p>
           
-            <!-- Display Chorus if it exists -->
             <ng-container *ngIf="currentHymn.Chorus">
               <p style="white-space: pre-line;">
                 Chorus:<br>{{ currentHymn.Chorus }}
               </p>
             </ng-container>
           
-            <!-- Display remaining verses -->
             <ng-container *ngFor="let verse of currentHymn.Verses.slice(1); let i = index">
               <p style="white-space: pre-line;">
                 {{ verse }}
