--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="container px-0" style="max-width: 750px;">
     <div style="padding: 10px 10px 10px 10px; position: fixed; top: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: #212529;">
         <div class="container px-0 d-flex justify-content-between align-items-center" style="flex: 1;">
-            <button (click)="decrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-left" style="color: black;"></i></button>
+            <button onclick="this.blur();" (click)="decrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-left" style="color: black;"></i></button>
             <div style="padding-left: 10px;"></div>
             <input #hymnNumberInput [(ngModel)]="searchValue" (keydown.enter)="searchHymn()" style="height: 60px; flex: 1; font-size: 40px;" type="number" class="form-control text-center" [placeholder]="currentHymnIndex + 1">
             <div style="padding-right: 10px;"></div>
-            <button (click)="incrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-right" style="color: black;"></i></button>
+            <button onclick="this.blur();" (click)="incrementHymn()" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-chevron-right" style="color: black;"></i></button>
             <div style="padding-right: 10px;"></div>
-            <button data-bs-toggle="modal" data-bs-target="#exampleModal" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-bars" style="color: black;"></i></button>
+            <button onclick="this.blur();" data-bs-toggle="modal" data-bs-target="#exampleModal" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-bars" style="color: black;"></i></button>
         </div>
     </div>
     <div class="container px-0" style="margin-top: 90px; margin-bottom: 90px;">
@@ -33,15 +33,15 @@
     </div>
     <div style="padding: 10px; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: #212529;">
       <div class="container px-0 d-flex">
-        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
+        <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
         <div style="padding-right: 10px; flex: 1;"></div>
-        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-play" style="color: green;"></i></button>
+        <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-play" style="color: green;"></i></button>
         <div style="padding-right: 10px; flex: 1;"></div>
-        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-stop" style="color: red;"></i></button>
+        <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-stop" style="color: red;"></i></button>
         <div style="padding-right: 10px; flex: 1;"></div>
-        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-minus" style="color: black;"></i></button>
+        <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-minus" style="color: black;"></i></button>
         <div style="padding-right: 10px; flex: 1;"></div>
-        <button style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-plus" style="color: black;"></i></button>
+        <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-plus" style="color: black;"></i></button>
       </div>
     </div>
 
