--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,21 +11,21 @@
         </div>
     </div>
     <div class="container px-0" style="margin-top: 90px; margin-bottom: 90px;">
-        <div *ngIf="currentHymn" class="text-center" #hymnContainer>
-            <h2 #titleRef>{{ currentHymn.Title }}</h2>
+        <div *ngIf="currentHymn" class="text-center" [ngStyle]="{'font-size.px': fontSize}">
+            <h2>{{ currentHymn.Title }}</h2>
           
-            <p #verse1Ref style="white-space: pre-line;">
+            <p style="white-space: pre-line;">
               {{ currentHymn.Verses[0] }}
             </p>
           
             <ng-container *ngIf="currentHymn.Chorus">
-              <p #chorusRef style="white-space: pre-line;">
+              <p style="white-space: pre-line;">
                 Chorus:<br>{{ currentHymn.Chorus }}
               </p>
             </ng-container>
           
             <ng-container *ngFor="let verse of currentHymn.Verses.slice(1); let i = index">
-              <p #verseRef{{i+1}} style="white-space: pre-line;">
+              <p style="white-space: pre-line;">
                 {{ verse }}
               </p>
             </ng-container>
@@ -39,9 +39,9 @@
         <div style="padding-right: 10px;"></div>
         <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-stop" style="color: red;"></i></button>
         <div style="padding-right: 10px; flex: 1;"></div>
-        <button onclick="this.blur();" (click)="adjustTextSize(-10)" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-minus" style="color: black;"></i></button>
+        <button (click)="decreaseFontSize()" onclick="this.blur();"  style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-minus" style="color: black;"></i></button>
         <div style="padding-right: 10px;"></div>
-        <button onclick="this.blur();" (click)="adjustTextSize(10)" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-plus" style="color: black;"></i></button>
+        <button (click)="increaseFontSize()" onclick="this.blur();"  style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-plus" style="color: black;"></i></button>
       </div>
     </div>
 
