--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
     </div>
     <div style="padding: 10px; position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; max-width: 750px; background-color: #212529;">
       <div class="container px-0 d-flex">
-        <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
+        <button data-bs-toggle="modal" data-bs-target="#exampleModal2" onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-book" style="color: black;"></i></button>
         <div style="padding-right: 10px; flex: 1;"></div>
         <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-light btn-lg"><i class="fa fa-play" style="color: green;"></i></button>
         <div style="padding-right: 10px;"></div>
@@ -67,6 +67,23 @@
                 </tr>
               </tbody>
             </table>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal top" style="max-width: 750px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
+      <div class="modal-dialog modal-fullscreen" style="max-width: 750px;">
+        <div class="modal-content" style="display: flex; flex-direction: column; height: 100%;">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Music Sheet</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" style="overflow-y: auto;">
+            
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
