--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,7 +83,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body" style="overflow-y: auto;">
-            
+            <img src="/assets/MusicSheets/{{currentHymn.Number}}/1.jpg" width="auto" height="auto"/>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
