--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,3 +10,12 @@ tr {
 tr:hover {
     background-color: #ccc;
   }
+  .pinch-zoom {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    touch-action: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
