--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,14 +75,10 @@
       </div>
     </div>
 
-    <div class="modal top" style="max-width: 750px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
-      <div class="modal-dialog modal-fullscreen" style="max-width: 750px;">
-        <div class="modal-content" style="display: flex; flex-direction: column; height: 100%;">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Music Sheet</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body" style="overflow:hidden; position:relative;">
+    <div class="modal top px-0" style="max-width: 750px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
+      <div class="modal-dialog modal-fullscreen px-0" style="max-width: 750px;">
+        <div class="modal-content px-0" style="display: flex; flex-direction: column; height: 100%;">
+          <div class="modal-body" style="padding: 0px; overflow:hidden; position:relative;">
             <div class="pinch-zoom px-0">
               <img id="zoomable-image" src="/assets/MusicSheets/{{currentHymn.Number}}/1.jpg" mwidth="100%" height="100%"/>
             </div>
@@ -93,5 +89,4 @@
         </div>
       </div>
     </div>
-    
 </div>
