--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,13 +78,18 @@
     <div class="modal top px-0" style="max-width: 750px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-mdb-backdrop="true" data-mdb-keyboard="true">
       <div class="modal-dialog modal-fullscreen px-0" style="max-width: 750px;">
         <div class="modal-content px-0" style="display: flex; flex-direction: column; height: 100%;">
-          <div class="modal-body" style="padding: 0px; overflow:hidden; position:relative;">
+          <div class="modal-body px-0" style="padding: 0px; overflow:hidden; position:relative;">
             <div class="pinch-zoom px-0">
               <img id="zoomable-image" src="/assets/MusicSheets/{{currentHymn.Number}}/1.jpg" mwidth="100%" height="100%"/>
             </div>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <div class="modal-footer px-0">
+            <div class="container px-0 d-flex justify-content-between align-items-center" style="flex: 1;">
+            <button data-bs-dismiss="modal" onclick="this.blur();" style="width: 60px; height: 60px; float: left;" class="btn btn-dark btn-lg"><i class="fa fa-close" style="color: white;"></i></button>
+            <div style="flex: 1;"></div>
+            <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-left" style="color: white;"></i></button>
+            <button onclick="this.blur();" style="width: 60px; height: 60px;" class="btn btn-dark btn-lg"><i class="fa fa-chevron-right" style="color: white;"></i></button>
+            </div>
           </div>
         </div>
       </div>
